# search-rdf

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  test-model.sh
.github/workflows/: ci.yml  release.yml
benches/: benchmark.rs
byte-trie/: .gitignore  Cargo.toml  README.md
byte-trie/benches/: benchmark.rs
byte-trie/src/: art.rs  lib.rs  patricia.rs
examples/wikidata-embedding-quantization/: README.md  config.yaml
examples/wikidata-humans/: README.md  config.yaml
examples/wikidata-movie-descriptions/: README.md  config.yaml
examples/wikidata-multimodal/: README.md  config.yaml
python/search_rdf/: __init__.py  __init__.pyi
python/search_rdf/model/: __init__.py  embedding.py
scripts/: build_keyword_index.py  build_text_embedding_index.py  build_text_embeddings.py  query_keyword_index.py  query_text_embedding_index.py
src/: lib.rs  utils.rs
src/data/: embedding.rs  map.rs  mod.rs  python.rs
src/data/item/: jsonl.rs  mod.rs  sparql.rs
src/data/text/: embedding.rs  mod.rs  python.rs  utils.rs
src/data/text/item/: jsonl.rs  mod.rs  sparql.rs
src/index/: embedding.rs  mod.rs  python.rs
src/index/text/: embedding.rs  full_text.rs  fuzzy.rs  keyword.rs  mod.rs  python.rs
src/model/: mod.rs  utils.rs
src/model/image/: huggingface.rs  mod.rs
src/model/multimodal/: mod.rs  open_clip.rs
src/model/text/: local.rs  mod.rs  sentence_transformer.rs  vllm.rs
