[package]
name = "search-rdf"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "search-rdf"

[lib]
name = "search_rdf"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
memmap2 = "0.9"
itertools = "0.14"
any_ascii = "0.3"
ordered-float = "5"
pathfinding = "4.14"
pathdiff = "0.2"
usearch = "2.12"
safetensors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = { version = "2.0", features = ["serde"] }
pyo3 = { version = "0.27", features = [
  "anyhow",
  "abi3-py312",
  "auto-initialize",
] }
byte-trie = { path = "./byte-trie" }
sparesults = "0.3"
oxrdf = "0.3"
ureq = { version = "3.1", features = ["json"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
num_cpus = "1.17"
futures = "0.3"
urlencoding = "2.1.3"
log = "0.4.29"
env_logger = "0.11.8"

[dev-dependencies]
tempfile = "3.6"
criterion = "0.7"

[[bench]]
name = "benchmark"
harness = false
