[package]
name = "search-rdf"
version = "0.5.1"
edition = "2024"
publish = false

[[bin]]
name = "search-rdf"

[lib]
name = "search_rdf"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
memmap2 = "0.9"
itertools = "0.14"
any_ascii = "0.3"
ordered-float = "5"
pathfinding = "4.14"
pathdiff = "0.2"
usearch = { git = "https://github.com/bastiscode/usearch.git", branch = "main" }
safetensors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = { version = "2.0", features = ["serde"] }
pyo3 = { version = "0.28", features = ["anyhow", "abi3-py312"] }
pythonize = "0.28"
numpy = "0.28"
byte-trie = { path = "./byte-trie" }
fst = { version = "0.4", features = ["levenshtein"] }
strsim = "0.11"
sparesults = "0.3"
spargebra = "0.4"
oxrdf = "0.3"
ureq = { version = "3.2", features = ["json"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
num_cpus = "1.17"
futures = "0.3"
urlencoding = "2.1.3"
url = "2.5"
log = "0.4.29"
env_logger = "0.11.9"
tempfile = "3.26"
tantivy = "0.25.0"
indicatif = "0.18.4"
serde-aux = "4.7.0"
serde_plain = "1.0.2"
image = "0.25.9"
base64 = "0.22"
http = "1.4.0"
parse-size = "1.1"

[features]
default = ["auto-initialize"]
auto-initialize = ["pyo3/auto-initialize"]

[dev-dependencies]
tempfile = "3.26"
criterion = "0.8"

[[bench]]
name = "benchmark"
harness = false
