[project]
name = "search-index"
description = "Search indices backed by Rust"
version = "0.1.0"
authors = [{ name = "Sebastian Walter", email = "swalter@cs.uni-freiburg.de" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

keywords = ["utilities", "index", "prefix", "similarity", "search"]

classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]

dependencies = [
  "sentence-transformers>=3.1",
  "safetensors>=0.4",
  "numpy>=1.24",
  "tqdm>=4.65",
]

[project.urls]
Github = "https://github.com/bastiscode/search-index"

[build-system]
requires = ["maturin>=1"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "search_index._internal"
