[project]
name = "search-rdf"
description = "Search indices (mainly to be combined with RDF query engines) backed by Rust"
version = "0.3.1"
authors = [{ name = "Sebastian Walter", email = "swalter@cs.uni-freiburg.de" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

keywords = ["utilities", "index", "rdf", "keyword", "similarity", "search"]

classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]

dependencies = [
  "sentence-transformers>=5",
  "numpy>=1.24",
  "tqdm>=4.65",
  "open-clip-torch>=3",
]

[project.urls]
Github = "https://github.com/bastiscode/search-rdf"

[build-system]
requires = ["maturin>=1"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "search_rdf._internal"
