[package]
name = "byte-trie"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
itertools = "0.14"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_with = "3.16"

[dev-dependencies]
criterion = "0.5"
art-tree = "0.2"
patricia_tree = "0.9"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
serde_json = "1.0"

[[bench]]
name = "benchmark"
harness = false
